# ai-service-desk

./: .dockerignore  .gitignore  README.md  alembic.ini  locustfile.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 8a167f40e271_add_assigned_to_column.py  f1bf460a89e7_add_assigned_engineer_details.py  fc3bd3b74739_initial_schema.py
app/: main.py
app/api/: ai.py  health.py  ticket.py  user.py
app/core/: config.py
app/database/: database.py
app/models/: ticket.py  user.py
app/schemas/: ticket.py  user.py
app/services/: prompt_templates.py  ticket_service.py  user_service.py
app/services/aws/: bedrock_service.py
tests/: conftest.py
tests/integration/: test_ticket_integration.py  test_user_integration.py
tests/profile/: profile_results.prof  profile_test.py
tests/unit/: test_check_piority_customer_sservice.py  test_ticket_service.py  test_user_service.py
